// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Test Renders Fancy Header 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  background: linear-gradient(90deg,rgba(2,0,36,1) 0%,rgba(121,79,9,1) 35%,rgba(0,212,255,1) 100%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 10px;
}

.c1 {
  max-width: 50px;
  margin-right: 20px;
}

.c2 {
  height: 100%;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: white;
  font-family: Helvetica,sans-serif;
  margin: 15px 10px;
  list-style: none;
  font-size: 15px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="c0"
  >
    <img
      class="c1"
      src="//images.arcteryx.com/foundation-ui/svgs/ArcBirdWhite.svg"
    />
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        Fancy
      </li>
      <li
        class="c3"
      >
        Men's
      </li>
      <li
        class="c3"
      >
        Women's
      </li>
      <li
        class="c3"
      >
        Explore
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Header Test Renders Header 1`] = `
<DocumentFragment>
  .c0 {
  box-sizing: border-box;
  height: 50px;
  width: 100%;
  background: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0 10px;
}

.c1 {
  max-width: 50px;
  margin-right: 20px;
}

.c2 {
  height: 100%;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c3 {
  color: white;
  font-family: Helvetica,sans-serif;
  margin: 15px 10px;
  list-style: none;
  font-size: 15px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  text-transform: uppercase;
  cursor: pointer;
}

.c3:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="c0"
  >
    <img
      class="c1"
      src="//images.arcteryx.com/foundation-ui/svgs/ArcBirdWhite.svg"
    />
    <ul
      class="c2"
    >
      <li
        class="c3"
      >
        <a
          class="c4"
          href="/"
        >
          Monobird
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          class="c4"
          href="/c/mens"
        >
          Mens
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          class="c4"
          href="/c/womens"
        >
          Womens
        </a>
      </li>
      <li
        class="c3"
      >
        <a
          class="c4"
          href="/explore"
        >
          Explore
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
